Fix horizontal overflow on message input

--- a/static/style.less
+++ b/static/style.less
@@ -173,10 +173,11 @@ input[type=text] {
         border-bottom: 0px;
         border-left: 0px;
         border-right: 0px;
+        box-sizing: border-box;
         width: 100%;
         position: absolute;
         bottom: 0px;
         outline: 0px;
-        height: 20px;
+        height: 30px;
     }
 }
